# data-aws-lambda-etl

./: README.md  pyproject.toml
src/data_aws_lambda_etl/: Dockerfile  __init__.py  main.py  requirements.txt  template.yml
src/data_aws_lambda_etl/.aws-sam/: build.toml
